# worldquant-capstone-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
DRL/modules/: architectures.py  environment.py  models.py  utils.py
M3/: dl_portfolio_optimization.ipynb  sensiment_data.ipynb  sentiment_data.ipynb
M4/: dl_mpo.ipynb
M5/: multi_period_benchmarks.ipynb  policy_EIIE.pt  reinforcement_learning_single_period.ipynb
M6/: multi_period_benchmarks.ipynb  reinforcement_learning_single_period.ipynb
M7/data/: sentiment_data.csv
archived notebooks/: DRL_transformer_sp100.ipynb
archived submissions/M3/: dl_portfolio_optimization.ipynb  sentiment_data.ipynb
archived submissions/M4/: dl_mpo.ipynb
data/: sensiment_data.ipynb
src/: 1. Markowitz_MPO_vs_SPO.ipynb  10. DRL_hybrid_transformer_cac40_train.ipynb  11. DRL_hybrid_transformer_cac40_eval.ipynb  12. DRL_performance_visualization.ipynb  2. Mean_Variance_MPO_djia.ipynb  3. DRL_eiie_djia_train.ipynb  4. DRL_eiie_djia_eval.ipynb  5. DRL_hybrid_transformer_djia_train.ipynb  6. DRL_hybrid_transformer_djia_eval.ipynb  7. Mean_Variance_MPO_cac40.ipynb  8. DRL_eiie_cac40_train.ipynb  9. DRL_eiie_cac40_eval.ipynb  DRL_eiie_djia.ipynb  DRL_eiie_sp100.ipynb  DRL_hybrid_transformer.ipynb  DRL_hybrid_transformer_cac40.ipynb  DRL_performance_visualization.ipynb  DRL_transformer_sp100.ipynb  Markowitz_MPO_vs_SPO.ipynb  Mean_Variance_MPO.ipynb  Mean_Variance_MPO_djia.ipynb  config.json  sensiment_data.ipynb  visualization.ipynb
src/models/: policy_EIIE_CAC40.pt  (+1 more)
wqu-capstone/: README.md  pyproject.toml
(+19 files in other folders)
