[tool.poetry]
name = "wqu-capstone"
version = "0.1.0"
description = ""
authors = [
    "Yuhao Shen <ericshenyuhao@outlook.com>",
    "Olabode James <jamesolabodes@gmail.com>",
    "Siddeshkanth Logonathan <siddeshkanth.logonathan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
